Made some changes

--- a/app/blocks/layout-jade/_head.jade
+++ b/app/blocks/layout-jade/_head.jade
@@ -17,6 +17,8 @@ meta(property="og:locale" content="ru_RU")
 title #{title}
 // Manifest
 link(rel="manifest" href="site.webmanifest")
+// Canonical
+link(rel="canonical" href="#{link}")
 // Favicon
 link(rel="icon" href="img/Favicon/favicon.ico" type="image/x-icon")
 link(rel="shortcut icon" href="img/Favicon/favicon.ico" type="image/x-icon")
