--- a/app/blocks/page-contents/sample/sample.jade
+++ b/app/blocks/page-contents/sample/sample.jade
@@ -5,6 +5,7 @@ extends ../../layout-jade/layout
 block variables
 	- var title = 'sample'
 	- var site = 'site.ru'
+	- var link = 'https://my-site.ru'
 	- var description = 'Описание страницы'
 	- var siteName = 'site name'
 	- var keywords = 'Кючевые слова'
