--- a/app/sass/_basic-content/basic-content.sass
+++ b/app/sass/_basic-content/basic-content.sass
@@ -14,7 +14,7 @@ body
 	font-family: $system-font
 	opacity: 1
 .webfont-loaded body
-	font-family: $font1-Regular
+	font-family: $font-text
 
 /**
  * @section Page content
