--- a/app/blocks/layout-jade/_head.jade
+++ b/app/blocks/layout-jade/_head.jade
@@ -48,6 +48,7 @@ meta(name="apple-mobile-web-app-status-bar-style" content="#000")
 // Preloading images
 link(rel="preload" as="image" href="img/logo.jpg")
 // Preloading fonts
+script(src="../js/webfont-loaded.js" async)
 link(rel="preload" href="#" as="font" type="font/woff2" crossorigin)
 if(body === 'is-home')
 	// Preload Styles
